--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: miRada
-Version: 0.1.11-13
-Date: 2012-11-12
+Version: 1.13.8-8
+Date: 2013-8-8
 Title: MicroRNA Microarray Data Analysis
 Author: Bin Wang <bwang@southalabama.edu>.
 Maintainer: Bin Wang <bwang@southalabama.edu>
@@ -10,6 +10,7 @@ Description: This package collects algorithms/functions developed for
         traditional hybridization microarray, CGH, beads-based
         microarray, and qRT-PCR array.
 License: GPL (>= 2)
-Packaged: 2012-11-12 20:37:07 UTC; bwang
+Packaged: 2013-08-08 17:12:53 UTC; bwang
 Repository: CRAN
-Date/Publication: 2012-11-13 07:17:43
+Date/Publication: 2013-08-08 19:46:49
+NeedsCompilation: yes
